--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
         <script type="text/javascript" src="js/main.js"></script>
     </head>
     <body>
+        <div id="alert" class="alert"></div>
     </body>
 </html>
